--- a/ecom/requirements.txt
+++ b/ecom/requirements.txt
@@ -2,9 +2,12 @@ asgiref==3.3.1
 astroid==2.4.2
 colorama==0.4.4
 Django==3.1.7
+django-cors-headers==3.7.0
 djangorestframework==3.12.2
+djangorestframework-simplejwt==4.6.0
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
+PyJWT==2.0.1
 pytz==2021.1
 six==1.15.0
 sqlparse==0.4.1
